--- a/atwiki/public/index.html
+++ b/atwiki/public/index.html
@@ -4,7 +4,7 @@
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta name="theme-color" content="#000000" />
-    <meta http-equiv="Content-Security-Policy" content="connect-src 'self' https://localhost:3001 http://localhost:3001">
+    <meta http-equiv="Content-Security-Policy" content="connect-src 'self' https://localhost:3001 http://localhost:3001 https://discord.com">
     <meta
       name="description"
       content="Web site created using create-react-app"
